[package]
name = "rusty_libimobiledevice"
version = "0.1.10"
edition = "2021"
authors = ["Jackson Coxson"]
description = "An ergonomic library to communicate with iOS devices"
homepage = "https://github.com/jkcoxson/rusty_libimobiledevice"
repository = "https://github.com/jkcoxson/rusty_libimobiledevice"
license = "LGPL-2.1-or-later"
keywords = ["libimobiledevice", "ios", "lockdown", "developer-tools"]
readme = "README.md"
documentation = "https://docs.rs/rusty_libimobiledevice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.14"
plist_plus = { version = "0.2.*" }
openssl = { version = "0.10.38", optional = true }
log = "0.4.15"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"
autotools = "0.2.5"
cmake = "0.1.48"

[features]
default = ["openssl"]
pls-generate = []
dynamic = ["plist_plus/dynamic"]
static = ["plist_plus/static"]
vendored = ["plist_plus/vendored", "openssl/vendored"]
