[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rusty_libimobiledevice = { version = "*", path = "../", features = ["static"] }

[[bin]]
name = "idevice_id"
path = "idevice_id.rs"

[[bin]]
name = "idevicescreenshot"
path = "idevicescreenshot.rs"

[[bin]]
name = "ideviceimagemounter"
path = "ideviceimagemounter.rs"

[[bin]]
name = "ideviceinfo"
path = "ideviceinfo.rs"
